# devsplit

./: .gitignore  BLUEPRINT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TASKS.md  devsplit.yaml  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  security-scan.yml
app/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Badge.tsx  Button.tsx  Card.tsx  CommandPalette.tsx  Onboarding.tsx  StatusDot.tsx  Switch.tsx  SystemFlow.tsx  Toast.tsx
app/src/lib/: export.ts  ipc.ts  jwt.ts
app/src/views/: CertificateView.tsx  ConfigView.tsx  HostsView.tsx  RoutesView.tsx  SessionView.tsx  TrafficView.tsx
crates/devsplit-core/: Cargo.toml
crates/devsplit-core/examples/: smoke.rs
crates/devsplit-core/src/: config.rs  dns.rs  hostsfile.rs  lib.rs  tlsca.rs  types.rs
crates/devsplit-core/src/proxy/: mod.rs
design/: banner.html  mockup.html
docs/: 00-blueprint.md  01-conceitos.md  02-arquitetura.md  03-frontend.md  04-build-distribuicao.md  05-design-ux.md  06-prior-art.md  10-referencia-devsplit-yaml.md  11-tls-privilegios-seguranca.md  12-features-runtime.md  STATUS.md  desenvolvimento.md  getting-started.md  security-scan.md  troubleshooting.md
examples/: devsplit.yaml
packaging/: PKGBUILD  install-appimage.sh  install-local.sh  install.sh
