[package]
name = "devsplit-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core engine for devsplit: transparent path-prefix reverse proxy with local TLS, hosts management and validated remote passthrough."

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"

# HTTP server + client (hyper direto, sem framework)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"

# TLS (provider ring p/ evitar dependencia de aws-lc-rs/cmake-heavy)
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

# geracao de CA/leaf
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }

# DNS direto (ignora /etc/hosts)
hickory-resolver = "0.24"

# estado do proxy lock-free p/ hot-reload
arc-swap = "1"

# config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# erros / logs
thiserror = "2"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
